fix: correct Jest coverage reporters syntax
Fix coverage report generation by using proper Jest syntax:
- Change from --coverageReporters=json-summary,text
- To --coverageReporters json-summary --coverageReporters text
- This allows Jest to properly generate both formats
- Enables beautiful markdown coverage reports to work

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -94,7 +94,7 @@ jobs:
         run: npm ci
 
       - name: Generate coverage report
-        run: npm test -- --coverage --coverageReporters=json-summary,text
+        run: npm test -- --coverage --coverageReporters json-summary --coverageReporters text
 
       - name: Create beautiful coverage report
         if: github.event_name == 'pull_request'
