--- a/package.json
+++ b/package.json
@@ -38,19 +38,21 @@
     "package.json"
   ],
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.5.0",
+    "@modelcontextprotocol/sdk": "^1.17.0",
     "axios": "^1.7.7",
-    "zod": "^3.23.8"
+    "zod": "^4.0.14"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.10",
-    "@typescript-eslint/eslint-plugin": "^7.16.0",
-    "@typescript-eslint/parser": "^7.16.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
+    "@eslint/js": "^9.32.0",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.38.0",
+    "@typescript-eslint/parser": "^8.38.0",
+    "eslint": "^9.32.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.1.3",
-    "jest": "^29.7.0",
+    "jest": "^30.0.5",
+    "jiti": "^2.5.1",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.2",
     "ts-jest": "^29.2.2",
