--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,6 +63,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build project
+        run: npm run build
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -83,25 +95,6 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
-
-      - name: Create Dockerfile
-        run: |
-          cat > Dockerfile << 'EOF'
-          FROM node:20-alpine AS builder
-          WORKDIR /app
-          COPY package*.json ./
-          RUN npm ci --only=production && npm cache clean --force
-
-          FROM node:20-alpine
-          RUN addgroup -g 1001 -S nodejs && adduser -S mcp -u 1001
-          WORKDIR /app
-          COPY --from=builder /app/node_modules ./node_modules
-          COPY --chown=mcp:nodejs dist ./dist
-          COPY --chown=mcp:nodejs package.json ./
-          USER mcp
-          EXPOSE 3000
-          CMD ["node", "dist/index.js"]
-          EOF
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
