--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -76,6 +76,7 @@ jobs:
         with:
           fail-on-severity: moderate
           allow-licenses: MIT, Apache-2.0, BSD-2-Clause, BSD-3-Clause, ISC
+          allow-dependencies-licenses: pkg:npm/cookie-signature@1.2.2
 
   coverage-report:
     name: Coverage Report
