Update CODEOWNERS and dependabot configuration to assign ownership to @alexerm
- Changed global code ownership to @alexerm for the entire repository.
- Updated specific ownership for package files and GitHub Actions workflows.
- Modified dependabot configuration to assign @alexerm as the reviewer and assignee for dependency updates.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,20 +1,12 @@
-# Global ownership
-* @upspawn
+# Global code owners for the entire repository
+* @alexerm
 
-# Core functionality
-/src/handlers/ @upspawn
-/src/services/ @upspawn
-/src/types/ @upspawn
+# Specific ownership for package files
+package.json @alexerm
+package-lock.json @alexerm
 
-# Infrastructure and configuration
-/.github/ @upspawn
-/package.json @upspawn
-/tsconfig.json @upspawn
-/jest.config.js @upspawn
+# GitHub Actions workflows
+.github/workflows/ @alexerm
 
-# Documentation
-/docs/ @upspawn
-/README.md @upspawn
-
-# Tests
-/tests/ @upspawn
+# Dependabot configuration
+.github/dependabot.yml @alexerm
