feat: migrate to Todoist API v1 with comprehensive integration testing
🚀 **Complete API v1 Migration**
- Migrate base URL from /rest/v2 to /api/v1 for all endpoints
- Update all deprecated endpoint paths to current v1 format:
  * /quick/add → /tasks/quick
  * /completed/get_all → /tasks/completed
  * /completed/get_project → /tasks/completed
  * /completed/get_stats → /tasks/completed/stats

🧪 **Comprehensive Integration Testing**
- Add 36 real API integration tests covering all tools and edge cases
- Implement proper test data cleanup and isolation with TEST_ prefixes
- Add dedicated Jest config for integration tests with extended timeouts
- Verify Pro account features and CRUD operations work correctly

🔧 **Tool Handler Improvements**
- Fix quick_add_task to use correct 'content'/'description' parameters
- Update all tool handlers to match v1 API specifications
- Maintain backward compatibility for existing MCP clients

📖 **Documentation & Testing**
- Add API v1 compliance verification badge to README
- Configure separate npm scripts for unit vs integration testing
- Exclude integration tests from standard test runs for faster development

✅ **Verification**: 36/36 integration tests passing with real Todoist Pro API

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "start": "node dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:integration": "jest --config=jest.integration.config.js tests/integration/todoist-api-real.test.ts --detectOpenHandles --forceExit",
+    "test:all": "jest --config=jest.integration.config.js",
     "lint": "eslint src/ --ext .ts",
     "lint:fix": "eslint src/ --ext .ts --fix",
     "format": "prettier --write src/",
