feat: automate version management in CI/CD
- Make src/index.ts read version dynamically from package.json
- Add automatic version bumping in release workflow based on git tags
- Add version validation script to prevent mismatches
- Include version validation in CI pipeline
- Update Docker workflow to sync versions

This eliminates the need to manually update versions across files.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Check TypeScript compilation
         run: npx tsc --noEmit
 
+      - name: Validate version consistency
+        run: npm run validate:versions
+
   test:
     name: Test (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
