--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,15 +30,21 @@ jobs:
       - name: Run tests
         run: npm test
 
+      - name: Extract version from tag
+        id: get_version
+        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+
+      - name: Update package.json version
+        run: |
+          VERSION="${{ steps.get_version.outputs.VERSION }}"
+          echo "Updating package.json version to $VERSION"
+          npm version --no-git-tag-version "$VERSION"
+
       - name: Build project
         run: npm run build
 
       - name: Create package
         run: npm pack
-
-      - name: Extract version from tag
-        id: get_version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
@@ -71,6 +77,16 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Extract version from tag
+        id: get_version_docker
+        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+
+      - name: Update package.json version
+        run: |
+          VERSION="${{ steps.get_version_docker.outputs.VERSION }}"
+          echo "Updating package.json version to $VERSION for Docker build"
+          npm version --no-git-tag-version "$VERSION"
 
       - name: Build project
         run: npm run build
