--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint": "eslint src/ --ext .ts",
     "lint:fix": "eslint src/ --ext .ts --fix",
     "format": "prettier --write src/",
+    "validate:versions": "node scripts/validate-versions.js",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
